docs/api/v2.0.0/2. Classes.md
Classes
=======

This is a complete list of available classes:

- [`Params\Immutable\ImmutableOptions`](Params/Immutable/ImmutableOptions.md) &mdash; Class that gives recursive read-only access to options added via constructor.
- [`Params\Immutable\ImmutableOptionsTrait`](Params/Immutable/ImmutableOptionsTrait.md) &mdash; Trait that contains an ImmutableOptions instance to use for nestable configuration options.
- [`Params\Immutable\ImmutableParameters`](Params/Immutable/ImmutableParameters.md) &mdash; Class that gives recursive read-only access to parameters added via constructor.
- [`Params\Immutable\ImmutableParametersTrait`](Params/Immutable/ImmutableParametersTrait.md) &mdash; Trait that contains an ImmutableParameters instance to use for nestable configuration parameters.
- [`Params\Options`](Params/Options.md) &mdash; Class that wraps an associative array for more convenient access of keys and values.
- [`Params\OptionsTrait`](Params/OptionsTrait.md) &mdash; Trait that contains an Options instance to use for nestable configuration options.
- [`Params\Parameters`](Params/Parameters.md) &mdash; Class that wraps an associative array for more convenient access of keys and values.
- [`Params\ParametersTrait`](Params/ParametersTrait.md) &mdash; Trait that contains a Parameters instance to use for nestable configuration parameters.
